feat: add login/signup button & style for lang switcher

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,3 +1,5 @@
 {
-  "searchPlaceholder": "What do you want to play?"
+  "searchPlaceholder": "What do you want to play?",
+  "header.login": "Log in",
+  "header.signup": "Sign up"
 }
