--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -1,3 +1,5 @@
 {
-  "searchPlaceholder": "Bạn muốn phát nội dung gì?"
+  "searchPlaceholder": "Bạn muốn phát nội dung gì?",
+  "header.login": "Đăng nhập",
+  "header.signup": "Đăng ký"
 }
